# Payload-SDK

./: .gitignore  .gitmodules  CMakeLists.txt  EULA.txt  LICENSE.txt  README.md
doc/: PSDK_api参考文档.html  PSDK_功能说明文档.html
doc/cn/: PSDK_API_合集.md  PSDK_教程_合集.md
doc/cn/api/: index.md
doc/cn/api/10.gdu-core/: 00.gdu-core.md  10.gdu-version-info.md  20.gdu-error-code.md  30.gdu-typedef.md
doc/cn/api/20.basic-functions/: 00.log-management.md  10.info-management.md  100.waypoint-v3.md  110.precise-positioning.md  120.cloud-platform-function.md  130.camera-function.md  20.message-subscription.md  30.flight-control.md  40.custom-control.md  50.hms.md  70.time-synchronization.md  80.data-channel.md  90.local-update.md  camera_manager.md
doc/cn/doc/: index.md  overview.md
doc/cn/doc/10.basic-introduction/: 00.wahts-psdk.md  10.function-overview.md  20.how-to-use-psdk.md
doc/cn/doc/20.model-instruction/: 00.payload-develop-criterion.md  10.choose-develop-platform.md  20.choose-hardware-platform.md
doc/cn/doc/30.quick-start/: 00.develop-notice.md  10.device-connect.md  30.run-sample-code.md  (+2 more)
doc/gdu_sdk_code_style/: gdu_sdk_template.c  gdu_sdk_template.h
psdk_lib/cJSON/: cJSON.c  cJSON.h
psdk_lib/include/: gdu_aircraft_info.h  gdu_camera_manager.h  gdu_core.h  gdu_data_transmission.h  gdu_data_transmission_inside.h  gdu_error.h  gdu_fc_subscription.h  gdu_flight_controller.h  gdu_gimbal.h  gdu_gimbal_manager.h  gdu_hms.h  gdu_hms_info_table.h  gdu_liveview.h  gdu_logger.h  gdu_payload_camera.h  gdu_payload_msg.h  gdu_platform.h  gdu_positioning.h  gdu_power_management.h  gdu_ppk.h  gdu_time_sync.h  gdu_typedef.h  gdu_upgrade.h  gdu_version.h  gdu_waypoint_v3.h  gdu_widget.h  version.h
psdk_lib/include/zlmediakit/: mk_common.h  mk_events.h  mk_events_objects.h  mk_h264_splitter.h  mk_httpclient.h  mk_media.h  mk_mediakit.h  mk_player.h  mk_proxyplayer.h  mk_pusher.h  mk_recorder.h  mk_rtp_server.h  mk_tcp.h  mk_thread.h  mk_util.h
psdk_lib/lib/armcc_cortex-m4/: libpayload.lib  mdk_app.lib
samples/sample_c/platform/linux/manifold2/: CMakeLists.txt
samples/sample_c/platform/linux/manifold2/application/: gdu_sdk_app_info.h  gdu_sdk_config.h  main.c
samples/sample_c/platform/linux/manifold2/hal/: hal_network.c  hal_network.h  hal_uart.c  hal_uart.h  hal_usb_bulk.c  hal_usb_bulk.h
tools/file2c/: 20221230134822.xml  __20221230134822_xml.h
(+166 files in other folders)
